<resources>
    <string name="app_name">AndroidFlier</string>
    <string name="title_nearest">Ближайшие</string>
    <string name="title_all">Все</string>
    <string name="title_favorite">Избранные</string>
    <string name="imgForShopCard">imgForShopCard</string>
    <string name="title_profile">Настройки</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_shop_detail">Акции</string>
    <string name="title_radiusCheck">Радиус проверки</string>
    <string name="title_tagCheck">Тэги поиска</string>
    <string name="title_timeCheck">Период проверки</string>
    <string name="notification_channel_name">Новые скидки</string>
    <string name="new_stock_title_test">test name</string>

    <string-array name="radiusSpinner">
        <item>100 метров</item>
        <item>200 метров</item>
        <item>300 метров</item>
        <item>500 метров</item>
        <item>1000 метров</item>
       </string-array>
    <string-array name="timeSpinner">
        <item>5 минут</item>
        <item>15 минут</item>
        <item>30 минут</item>
        <item>60 минут</item>
        <item>12 часов</item>
        <item>24 часов</item>
    </string-array>
</resources>