<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Switch
        android:id="@+id/switchOnOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">
    </Switch>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/one_barrier"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="switchOnOff "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/time_check_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_timeCheck"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one_barrier" />

    <Spinner
        android:id="@+id/time_check_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/time_check_text"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/time_check_text" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/two_barrier"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="time_check_text, time_check_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/radius_check_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_radiusCheck"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/two_barrier" />

    <Spinner
        android:id="@+id/radius_check_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/radius_check_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/radius_check_text"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/three_barrier"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="radius_check_text, radius_check_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tag_check_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_tagCheck"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tag_edit_text"
        app:layout_constraintTop_toTopOf="@+id/tag_edit_text" />

    <EditText
        android:id="@+id/tag_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tag_check_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tag_check_text"
        app:layout_constraintTop_toBottomOf="@+id/radius_check_text" />

</androidx.constraintlayout.widget.ConstraintLayout>